# wajo

./: .gitignore  README.md  docker-compose-prod.yml  docker-compose.prod.yml  package-lock.json  package.json  rundev.sh
server/: .env.example  database.dbml  manage.py  pyproject.toml
server/api/: asgi.py  permissions.py  settings.py  urls.py
server/api/auth/: serializers.py  urls.py  views.py
server/api/invoice/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/api/invoice/migrations/: 0001_initial.py
server/api/invoice/utils/: docx_generator.py
server/api/invoices/: admin.py  models.py
server/api/invoices/migrations/: 0001_initial.py  0002_rename_invoices_invoice.py
server/api/leaderboard/: apps.py  serializers.py  tests.py  urls.py  views.py
server/api/manager/: apps.py  serializers.py  urls.py  views.py
server/api/question/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/api/question/migrations/: 0001_initial.py  0002_alter_category_genre.py  (+8 more)
server/api/quiz/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
server/api/results/: apps.py  serializers.py  tests.py  urls.py  views.py
server/api/setting/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/api/team/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/api/users/: admin.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
server/app/: serializers.py  urls.py
server/static/: invoice_template.docx
(+383 files in other folders)
